--- a/flutter_leave_lc/android/app/build.gradle
+++ b/flutter_leave_lc/android/app/build.gradle
@@ -20,8 +20,9 @@ def flutterVersionName = localProperties.getProperty('flutter.versionName')
 if (flutterVersionName == null) {
     flutterVersionName = '1.0'
 }
-
 apply plugin: 'com.android.application'
+
+apply plugin: 'com.huawei.agconnect'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
 android {
@@ -58,7 +59,7 @@ android {
     }
     buildTypes {
         debug {
-            signingConfig signingConfigs.debug
+            signingConfig signingConfigs.release
         }
         release {
             minifyEnabled false
@@ -81,7 +82,6 @@ dependencies {
 
     implementation 'com.android.support:multidex:1.0.3'
     //混合推送需要的包
-    implementation('cn.leancloud:mixpush-xiaomi:8.2.18')
 
     //即时通信与推送需要的包
     implementation 'cn.leancloud:realtime-android:8.2.18'
@@ -91,4 +91,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.android.material:material:1.5.0'
+
+    implementation 'com.huawei.hms:push:5.3.0.304'
+    implementation 'cn.leancloud:mixpush-hms:8.2.18'
 }
