--- a/flutter_leave_lc/android/build.gradle
+++ b/flutter_leave_lc/android/build.gradle
@@ -2,10 +2,15 @@ buildscript {
     repositories {
         google()
         mavenCentral()
+        maven {
+            url 'http://developer.huawei.com/repo/'
+            allowInsecureProtocol = true
+        }
     }
 
     dependencies {
         classpath 'com.android.tools.build:gradle:7.0.4'
+        classpath 'com.huawei.agconnect:agcp:1.6.0.300'
     }
 }
 
@@ -13,6 +18,10 @@ allprojects {
     repositories {
         google()
         mavenCentral()
+        maven {
+            url 'http://developer.huawei.com/repo/'
+            allowInsecureProtocol = true
+        }
     }
 }
 
